Fix: increased color contrast for uploader comments in Catppuccin Mocha theme #6597

--- a/src/renderer/themes.css
+++ b/src/renderer/themes.css
@@ -291,7 +291,7 @@ it can be safely elided. This looks quite pleasant on this theme. */
   --bg-color: #1e1e2e;
   --favorite-icon-color: #0f0;
   --card-bg-color: #181825;
-  --secondary-card-bg-color: #1e1e2e;
+  --secondary-card-bg-color: #4c4c76;
   --scrollbar-color: #313244;
   --scrollbar-color-hover: #3d4051;
   --side-nav-color: #181825;
